--- a/StudentManagement/StudentManagement.csproj
+++ b/StudentManagement/StudentManagement.csproj
@@ -156,6 +156,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201802221049302_InitialCreate.cs" />
+    <Compile Include="Migrations\201802221049302_InitialCreate.Designer.cs">
+      <DependentUpon>201802221049302_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201802221355578_Student_Valisation.cs" />
+    <Compile Include="Migrations\201802221355578_Student_Valisation.Designer.cs">
+      <DependentUpon>201802221355578_Student_Valisation.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\EF\StudentContext.cs" />
     <Compile Include="Models\Group.cs" />
     <Compile Include="Models\Student.cs" />
@@ -201,6 +210,7 @@
     <Content Include="Views\Student\index.cshtml" />
     <Content Include="Views\ArithmeticOperation\Addition.cshtml" />
     <Content Include="Views\ArithmeticOperation\index.cshtml" />
+    <Content Include="Views\Student\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -217,6 +227,14 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201802221049302_InitialCreate.resx">
+      <DependentUpon>201802221049302_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802221355578_Student_Valisation.resx">
+      <DependentUpon>201802221355578_Student_Valisation.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
